src/objects/Therapy_Received__c.object
<CustomObject>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Followup_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Followup Form</label>
        <referenceTo>Followup_Form__c</referenceTo>
        <relationshipLabel>Therapy Receiveds</relationshipLabel>
        <relationshipName>Therapy_Receiveds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Date_Performed__c</fullName>
        <label>Start Date/Date Performed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Therapy__c</fullName>
        <label>Therapy</label>
        <picklist>
            <picklistValues>
                <fullName>Tamoxifen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aromatase inhibitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ovarian suppression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ovarian ablation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-protocol chemotherapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trastuzumab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other non-protocol therapy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pg_therapyreceived_Id__c</fullName>
        <label>pg_therapyreceived_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Therapy Received</label>
    <nameField>
        <label>Therapy Received Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Therapy Receiveds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_Cannot_be_a_future_date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_performed_cannot_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date_Date_Performed__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Start_Date_Date_Performed__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
</CustomObject>